--- a/app/presentation/languages/suo/translation.json
+++ b/app/presentation/languages/suo/translation.json
@@ -1,4 +1,6 @@
 {
+  "currency": "Valuutta",
+  "language": "Kieli",
   "where is my money": "Missä rahani ovat",
   "here is your money": "Tässä on rahasi",
   "log out": "Kirjaudu ulos",
