adding format to numbers to avoid big numbers to mess with the structure. New linearGradients on flatlist list and on big texts that are cropped

--- a/app/presentation/languages/en/translation.json
+++ b/app/presentation/languages/en/translation.json
@@ -29,7 +29,7 @@
   "no more debtors": "No more debtors",
   "paid you": "paid you",
   "has": "Has ",
-  "yes": "Si",
+  "yes": "Yes",
   "no": "No",
   "accept": "Accept",
   "cancel": "Cancel",
