--- a/app/presentation/languages/suo/translation.json
+++ b/app/presentation/languages/suo/translation.json
@@ -1,4 +1,5 @@
 {
+  "have you paid": "Oletko maksanut",
   "Name is already on the list": "Nimi on jo listalla",
   "Name must be longer than 1 character": "Nimen on oltava pidempi kuin 1 merkki",
   "Name is required": "Nimi on pakollinen",
