adding stats in settings screen, changing ApiDelivery to local backend and  minor changes in design.

--- a/app/presentation/languages/es/translation.json
+++ b/app/presentation/languages/es/translation.json
@@ -1,4 +1,5 @@
 {
+  "account info": "Información de cuenta",
   "have you paid": "¿Le has pagado a",
   "Name is already on the list": "El nombre ya está en la lista",
   "Name must be longer than 1 character": "El nombre debe tener más de 1 carácter",
