--- a/app/presentation/languages/en/translation.json
+++ b/app/presentation/languages/en/translation.json
@@ -1,4 +1,5 @@
 {
+  "account info": "Account info",
   "have you paid": "Have you paid",
   "Name is already on the list": "Name is already on the list",
   "Name must be longer than 1 character": "Name must be longer than 1 character",
