adding new user statistics in settingsScreen.

--- a/app/presentation/languages/en/translation.json
+++ b/app/presentation/languages/en/translation.json
@@ -1,4 +1,5 @@
 {
+  "balance": "Balance",
   "account info": "Account info",
   "have you paid": "Have you paid",
   "Name is already on the list": "Name is already on the list",
