--- a/app/presentation/languages/es/translation.json
+++ b/app/presentation/languages/es/translation.json
@@ -1,4 +1,5 @@
 {
+  "balance": "Balance",
   "account info": "Información de cuenta",
   "have you paid": "¿Le has pagado a",
   "Name is already on the list": "El nombre ya está en la lista",
