--- a/app/presentation/languages/suo/translation.json
+++ b/app/presentation/languages/suo/translation.json
@@ -1,4 +1,5 @@
 {
+  "balance" : "Balance",
   "account info": "Tilin tiedot",
   "have you paid": "Oletko maksanut",
   "Name is already on the list": "Nimi on jo listalla",
